<resources>
    <string name="app_name">RewardsKotlin</string>
    <string name="activities">Tasks</string>
    <string name="rewards">REWARDS</string>
    <string name="addPLUS">+New</string>
    <string name="delete_all">delete</string>
    <string name="usage">USAGE</string>
    <string name="activity">Task</string>
    <string name="reward">Reward</string>
    <string name="is_limited">is limited?</string>
    <string name="month">month</string>
    <string name="week">Week</string>
    <string name="add">add</string>
    <string name="submit">SUBMIT</string>
    <string name="delete">Cancel</string>
    <string name="day">Day</string>
    <string name="btnFIRSTSCREEN">First screen &amp; Ratio</string>
    <string name="firstFragment">[untitled] is an app that brings balance between tasks and rewards in your life using a points system! </string>
    <string name="secondFragment">Name is an app that brings balance between tasks and rewards in your life using a points system </string>
    <string name="edittext_hint"><font size="15">Hint here!</font></string>

    <string-array name="debugView">
        <item>x1</item>
        <item>x1.5</item>
        <item>x0.75</item>
    </string-array>

    <string-array name="Reward">
        <item>Short duration</item>
        <item>Average duration</item>
        <item>Long duration</item>
    </string-array>

    <string-array name="Actividad">
        <item>Less important / Short</item>
        <item>Important / Average</item>
        <item>High priority/ Long</item>
    </string-array>

    <string-array name="ordenar">
        <item>Sort By: Alphabetical - A > Z</item>
        <item>Sort By: Alphabetical - Z > A</item>
        <item>Sort By: Price - Cheap > Expensive</item>
        <item>Sort By: Price - Expensive > Cheap</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>