<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F8D7">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:shadowColor="#E3ED96"
            android:shadowDx="-2"
            android:shadowDy="4"
            android:shadowRadius="7"
            android:text="Create/Edit reward"
            android:textColor="#2E2E2E"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/btn_ultrarounded"
            android:backgroundTint="#48000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        android:text="Reward or actvity"
        app:layout_constraintBottom_toTopOf="@+id/btnchooseReward"
        app:layout_constraintStart_toStartOf="@+id/btnchooseReward" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="3dp"
        android:text="Limited uses"
        app:layout_constraintBottom_toTopOf="@+id/isLimited"
        app:layout_constraintStart_toStartOf="@+id/isLimited" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="Importance"
        app:layout_constraintBottom_toTopOf="@+id/getPrioridad"
        app:layout_constraintStart_toStartOf="@+id/getPrioridad" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="3dp"
        android:text="Times per day/week/month"
        app:layout_constraintBottom_toTopOf="@+id/btnWeek"
        app:layout_constraintStart_toStartOf="@+id/btnDay" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintStart_toStartOf="@+id/txtNombre" />


    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/txt_input_rounded"
        android:elevation="4dp"

        android:hint="insert task name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="20"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/btnChooseActivty"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_radio_month"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/activity"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnchooseReward"
        app:layout_constraintTop_toTopOf="@+id/btnchooseReward" />

    <TextView
        android:id="@+id/btnchooseReward"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/btn_radio_day"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/reward"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/isLimited"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/switch_rounded"
        android:backgroundTint="#E3ED96"
        android:elevation="4dp"
        android:text="Limited"
        android:textColor="#5C5C5C"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtLimitedTimes"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnchooseReward" />

    <EditText
        android:id="@+id/txtLimitedTimes"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_radio_month"
        android:elevation="4dp"
        android:gravity="center"
        android:hint="Times"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/isLimited" />

    <TextView
        android:id="@+id/btnDay"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_radio_day"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/day"
        android:textSize="18sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnWeek"
        app:layout_constraintTop_toTopOf="@+id/btnWeek" />

    <TextView
        android:id="@+id/btnMonth"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/btn_radio_month"
        android:elevation="4dp"
        android:gravity="center"
        android:text="Month"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnWeek"
        app:layout_constraintTop_toTopOf="@+id/btnWeek" />

    <TextView
        android:id="@+id/btnWeek"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/btn_radio_week"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/week"
        android:textSize="18sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isLimited" />

    <EditText
        android:id="@+id/txtTimesPerMonth"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/txt_timespormonth"
        android:elevation="4dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWeek"
        tools:text="10" />

    <Spinner
        android:id="@+id/getPrioridad"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/spinner_style"
        android:elevation="4dp"
        android:entries="@array/Reward"
        android:minHeight="48dp"
        android:overlapAnchor="false"
        android:popupBackground="@drawable/spinner_item_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTimesPerMonth" />


    <Spinner
        android:id="@+id/spinnerGetTag"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"

        android:background="@drawable/spinner_style"
        android:elevation="4dp"
        android:entries="@array/debugView"
        android:overlapAnchor="false"
        android:popupBackground="@drawable/spinner_item_create"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/getPrioridad"
        app:layout_constraintTop_toBottomOf="@+id/getPrioridad">

    </Spinner>

    <Button
        android:id="@+id/btnAddTag"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:text="@string/addPLUS"
        app:layout_constraintEnd_toEndOf="@+id/getPrioridad"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/spinnerGetTag"
        app:layout_constraintTop_toTopOf="@+id/spinnerGetTag" />

    <Button
        android:id="@+id/commitAddTag"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/add"
        android:textSize="11sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/txtNombreTag"
        app:layout_constraintTop_toBottomOf="@+id/btnAddTag" />

    <!--android:visibility="gone" -->

    <EditText
        android:id="@+id/txtNombreTag"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:hint="New tag name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="10"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGetTag"
        tools:ignore="TouchTargetSizeCheck" />

    <!-- footer -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/view2"
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/btn_ultrarounded"
            android:backgroundTint="#48000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/btn_ultrarounded"
            android:backgroundTint="#97D35B"
            android:elevation="4dp"
            android:gravity="center"
            android:text="@string/submit"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"

            android:background="@drawable/btn_ultrarounded"
            android:backgroundTint="#BF404D"
            android:elevation="4dp"
            android:src="@drawable/zz_icon_x"

            app:layout_constraintStart_toEndOf="@+id/btnSubmit"
            app:layout_constraintTop_toTopOf="@+id/btnSubmit"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>